# plane_segmentation

./: CMakeLists.txt  README.md  plane_segmentation.zsh
app/: cloud_cut.cpp  config.yaml  lidar_cut.py  plane_segmentation_main.cpp  point_cloud_cut.cpp
bash_test/1/: spinning.ply  static.ply
bash_test/1/debug/: plane_cloud.ply  tag_cloud-0.ply  tag_cloud-1.ply  tag_cloud-2.ply  tag_cloud.ply
bash_test/1/debug--/: cut-0.ply  cut-1.ply  cut-10.ply  cut-11.ply  cut-12.ply  cut-13.ply  cut-14.ply  cut-15.ply  cut-2.ply  cut-3.ply  cut-4.ply  cut-5.ply  cut-6.ply  cut-7.ply  cut-8.ply  cut-9.ply  cut-cloud.ply  plane_cloud.ply  rdp_result0.txt  rdp_result1.txt  rdp_result10.txt  rdp_result11.txt  rdp_result12.txt  rdp_result13.txt  rdp_result14.txt  rdp_result15.txt  rdp_result2.txt  rdp_result3.txt  rdp_result4.txt  rdp_result5.txt  rdp_result6.txt  rdp_result7.txt  rdp_result8.txt  rdp_result9.txt  tag_cloud-0.ply  tag_cloud-1.ply  tag_cloud-2.ply  tag_cloud.ply
cmake/: FindYaml.cmake
src/: clustering.cpp  clustering.h  plane_segmentation.cpp  plane_segmentation.h  rdp.cpp  rdp.h
